--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgb(37, 37, 42);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,10 +24,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +31,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+p{
+  font-size: 4rem;
+  color: rgb(220, 16, 220);
 }
